--- a/java_version/src/main/resources/templates/crawler_dashboard.html
+++ b/java_version/src/main/resources/templates/crawler_dashboard.html
@@ -20,15 +20,15 @@
         </header>
         <table style="margin:100px 100px 10px 0px;">
             <tr>
-                <td><h2 class= "worker-info" th:text="${response.name}"></h2></td>
+                <td><h2 class= "worker-info" th:text="${workTimeResponse.name}"></h2></td>
                 <td><h2 class= "worker-info">님 이번주 근무시간은?</h2></td>
             </tr>
         </table>
         <table style="margin:0px 0px 250px 0px; auto;">
             <tr>
-                <td><h1 class= "work-time" th:text="${response.hour}"/></td>
+                <td><h1 class= "work-time" th:text="${workTimeResponse.hour}"/></td>
                 <td><h1 class= "work-time">시간&nbsp</h1></td>
-                <td><h1 class= "work-time" th:text="${response.min}"/></td>
+                <td><h1 class= "work-time" th:text="${workTimeResponse.min}"/></td>
                 <td><h1 class= "work-time">분 </h1></td>
             </tr>
         </table>
@@ -46,9 +46,11 @@
         <div class="military-late">
             <table style="margin:0 auto;">
                 <tr>
-                    <td><h1 class= "military-late-time" th:text="${response.hour}"/></td>
+                    <td><h1 class= "military-late-time" th:text="${militaryLateTimeResponse.day}"/></td>
+                    <td><h1 class= "military-late-time">일&nbsp</h1></td>
+                    <td><h1 class= "military-late-time" th:text="${militaryLateTimeResponse.hour}"/></td>
                     <td><h1 class= "military-late-time">시간&nbsp</h1></td>
-                    <td><h1 class= "military-late-time" th:text="${response.min}"/></td>
+                    <td><h1 class= "military-late-time" th:text="${militaryLateTimeResponse.min}"/></td>
                     <td><h1 class= "military-late-time">분 </h1></td>
                 </tr>
             </table>
