[feat] 근무시간 100% 넘어갈 시 100%로만 반환하도록 변경 및 html 코드 정상화

--- a/java_version/src/main/resources/templates/crawler_dashboard.html
+++ b/java_version/src/main/resources/templates/crawler_dashboard.html
@@ -33,8 +33,9 @@
             </tr>
         </table>
         <div class="progress" style="height:40px;">
-<!--            <div class="progress-bar" th:utext="${workTimeResponse.percentage} + '%'" th:style="'width: ' + ${workTimeResponse.percentage} + '%'"></div>-->
-            <div class="progress-bar" th:style="'width: 50%'"><div style="font-size: 20px;margin: 10px 0px 10px 0px;" th:utext="${workTimeResponse.percentage} + '%'"> </div></div>
+            <div class="progress-bar" th:style="'width: ' + ${workTimeResponse.percentage} + '%'">
+                <div style="font-size: 20px;margin: 10px 0px 10px 0px;" th:utext="${workTimeResponse.percentage} + '%'"></div>
+            </div>
         </div>
         <table style="margin:100px 100px 30px 0px;">
             <tr>
