--- a/java_version/src/main/resources/templates/crawler_dashboard.html
+++ b/java_version/src/main/resources/templates/crawler_dashboard.html
@@ -24,7 +24,7 @@
                 <td><h2 class= "worker-info">님 이번주 근무시간은?</h2></td>
             </tr>
         </table>
-        <table style="margin:0px 0px 250px 0px; auto;">
+        <table style="margin:0px 0px 250px 0px;">
             <tr>
                 <td><h1 class= "work-time" th:text="${workTimeResponse.hour}"/></td>
                 <td><h1 class= "work-time">시간&nbsp</h1></td>
