[chore] 전문연구요원 기능 옆 캐릭터 굳건이로 교체

--- a/java_version/src/main/resources/templates/crawler_dashboard.html
+++ b/java_version/src/main/resources/templates/crawler_dashboard.html
@@ -39,11 +39,12 @@
         </div>
         <table style="margin:100px 100px 30px 0px;">
             <tr>
-                <td><img width="100px" height="100px" th:src="@{/images/hogook.jpg}"></td>
+                <td><img width="100px" height="140px" th:src="@{/images/gootgun.png}"></td>
                 <td><h1 class="military-title">전문연구요원 기능</h1></td>
             </tr>
         </table>
         <h2 class="military-sub-title">올해 누적 지각 시간</h2>
+        <h4 style="margin:0 auto;">"소중한 연차를 지킵시다"</h4>
         <div class="military-late">
             <table style="margin:0 auto;">
                 <tr>
