[feat] 로그인 실패 시 로그인 버튼 메시지 변경 기능 추가

--- a/java_version/src/main/resources/static/css/style.css
+++ b/java_version/src/main/resources/static/css/style.css
@@ -106,7 +106,7 @@ body{
 	color: #4e4e4e;
 	align-items: center;
 	justify-content: flex-start;
-	border-bottom: solid 1px var(--border-grayucolor);
+	border-bottom: solid 1px var(--border-gray-color);
 }
 .login-stay-sign-in i{
 	font-size: 25px;
